--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
 					<div class="col-md-8 wow fadeIn" data-wow-delay="0.9s">
 						<h1>Vignesh Balusamy</h1>
 						<!-- <h1>Lavish</h1> -->
-						<h3 class="rotate">Blockchain Developer, DeFi Developer, Smart Contract Developer, PROJECT
-							LEADER</h3>
+						<h3 class="rotate">Blockchain Developer, DeFi Developer, Smart Contract Developer, Business Development</h3>
 						<p>Expertise in various web3 Domains which includes Blockchain, Smart Contract Development,
 							Layer-2 Technologies, Decentralized Finance, Crypto Currency, Digital Asset Management,
 							Wallet Management, Tokenization and Metaverse.
