--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 							space.
 
 						</p>
-						<a href="https://docs.google.com/document/d/1zUnlE82yp9omcTf9AGI4W6zHtUREdDMKb8GMiz1XWdM/edit?tab=t.0" target="_blank" id="downloadBtn" class="btn btn-default	 wow fadeInUp" data-wow-delay="1s">Download
-							Resume</a>
+						<a href="https://docs.google.com/document/d/1zUnlE82yp9omcTf9AGI4W6zHtUREdDMKb8GMiz1XWdM/edit?tab=t.0" target="_blank" id="downloadBtn" class="btn btn-default	 wow fadeInUp" data-wow-delay="1s">Download	Resume
+						</a>
 					</div>
 					<div class="col-md-2"></div>
 				</div>
@@ -78,7 +78,7 @@
 								<i class="fa fa-laptop"></i>
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">Responsive Mobile</h3>
+								<h3 class="media-heading">Innovative Blockchian Solution</h3>
 								<p>Lavish CSS Template is designed by templatemo. Download, edit and use this layout.
 								</p>
 							</div>
@@ -91,7 +91,7 @@
 								<i class="fa fa-link"></i>
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">CSS Templates</h3>
+								<h3 class="media-heading">Advanced DeFi Engineering</h3>
 								<p>We provide a wide range of HTML5 templates for free. Please spread a word about us on
 									social media.</p>
 							</div>
@@ -104,7 +104,7 @@
 								<i class="fa fa-paper-plane"></i>
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">UI &AMP; UX Design</h3>
+								<h3 class="media-heading">Secure Smart Contract Development</h3>
 								<p>Credits go to <a rel="nofollow" href="https://pixabay.com">Pixabay</a> and <a
 										rel="nofollow" href="http://unsplash.com">Unsplash</a> for images used in this
 									free CSS website template.</p>
@@ -138,10 +138,10 @@
 							<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80"
 								aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div>
 						</div>
-						<span>SEO Stuffs <small>70%</small></span>
+						<span>Product Development <small>80%</small></span>
 						<div class="progress">
 							<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60"
-								aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>
+								aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
 						</div>
 						<span>HTLM5 &AMP; CSS3 <small>90%</small></span>
 						<div class="progress">
@@ -167,7 +167,7 @@
 								<img src="images/portfolio-img1.jpg" class="img-responsive" alt="portfolio img">
 								<div class="portfolio-overlay">
 									<h4>Web Design</h4>
-									<h5>Author: Cindy</h5>
+									<h5>Author: Vignesh Balusamy</h5>
 								</div>
 							</div>
 						</a>
@@ -177,7 +177,7 @@
 							<img src="images/portfolio-img2.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
 								<h4>Web App</h4>
-								<h5>Author: Linda</h5>
+								<h5>Author: Vignesh Balusamy</h5>
 							</div>
 						</div>
 					</div>
@@ -186,7 +186,7 @@
 							<img src="images/portfolio-img3.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
 								<h4>Mobile App</h4>
-								<h5>Author: Kate</h5>
+								<h5>Author: Vignesh Balusamy</h5>
 							</div>
 						</div>
 					</div>
@@ -195,7 +195,7 @@
 							<img src="images/portfolio-img4.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
 								<h4>Old Artwork</h4>
-								<h5>Author: Catherine</h5>
+								<h5>Author: Vignesh Balusamy</h5>
 							</div>
 						</div>
 					</div>
@@ -204,7 +204,7 @@
 							<img src="images/portfolio-img5.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
 								<h4>New Animation</h4>
-								<h5>Author: Kathy</h5>
+								<h5>Author: Vignesh Balusamy</h5>
 							</div>
 						</div>
 					</div>
@@ -219,7 +219,7 @@
 				<div class="row">
 					<div class="col-lg-5 col-lg-offset-1 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
 						<address>
-							<p class="contact-title">CONTACT ME</p>
+							<p class="contact-title">CONNECT HERE</p>
 							<p><i class="fa fa-phone"></i> +91 8870915438</p>
 							<p><i class="fa fa-envelope-o"></i> vigneshbalu96@gmail.com</p>
 							<p><i class="fa fa-map-marker"></i> Chennai, Tamil Nadu, India</p>
