--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
 	<!-- animate -->
 	<link rel="stylesheet" href="css/animate.min.css">
+	<!-- Custom CSS -->
+	<link rel="stylesheet" href="css/custom.css">
 	<!-- bootstrap -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<!-- font-awesome -->
@@ -29,6 +31,9 @@
 	<link rel="stylesheet" href="css/jquery.fullPage.css">
 	<!-- custom -->
 	<link rel="stylesheet" href="css/templatemo-style.css">
+	<!-- Icon -->
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
 
 </head>
 
@@ -63,59 +68,58 @@
 		<!-- end home -->
 
 		<!-- start work -->
-		<div id="work" class="section">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12 wow bounce">
-						<h2>WHAT I DO</h2>
-					</div>
-				</div>
+<div id="work" class="section">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 wow bounce">
+                <h2>WHAT I DO</h2>
+            </div>
+        </div>
 
-				<div class="row">
-					<div class="col-md-4 col-xs-11 wow fadeInUp" data-wow-delay="0.6s">
-						<div class="media">
-							<div class="media-object media-left">
-								<i class="fa fa-laptop"></i>
-							</div>
-							<div class="media-body">
-								<h3 class="media-heading">Innovative Blockchian Solution</h3>
-								<p>Lavish CSS Template is designed by templatemo. Download, edit and use this layout.
-								</p>
-							</div>
-						</div>
-					</div>
+        <div class="row">
+            <div class="col-md-4 col-xs-11 wow fadeInUp" data-wow-delay="0.6s">
+                <div class="media">
+                    <div class="media-object media-left">
+                        <i class="fa fa-laptop"></i>
+                    </div>
+                    <div class="media-body">
+                        <h3 class="media-heading">Innovative Blockchain Solution</h3>
+                        <p>Lavish CSS Template is designed by templatemo. Download, edit and use this layout.</p>
+                        <button class="btn btn-primary view-more" data-target="#modal1">View More</button>
+                    </div>
+                </div>
+            </div>
 
-					<div class="col-md-4 col-xs-11 wow fadeInUp" data-wow-delay="0.6s">
-						<div class="media">
-							<div class="media-object media-left">
-								<i class="fa fa-link"></i>
-							</div>
-							<div class="media-body">
-								<h3 class="media-heading">Advanced DeFi Engineering</h3>
-								<p>We provide a wide range of HTML5 templates for free. Please spread a word about us on
-									social media.</p>
-							</div>
-						</div>
-					</div>
+            <div class="col-md-4 col-xs-11 wow fadeInUp" data-wow-delay="0.6s">
+                <div class="media">
+                    <div class="media-object media-left">
+                        <i class="fa fa-link"></i>
+                    </div>
+                    <div class="media-body">
+                        <h3 class="media-heading">Advanced DeFi Engineering</h3>
+                        <p>We provide a wide range of HTML5 templates for free. Please spread a word about us on social media.</p>
+                        <button class="btn btn-primary view-more" data-target="#modal2">View More</button>
+                    </div>
+                </div>
+            </div>
 
-					<div class="col-md-4 col-xs-11 wow fadeInUp" data-wow-delay="0.6s">
-						<div class="media">
-							<div class="media-object media-left">
-								<i class="fa fa-paper-plane"></i>
-							</div>
-							<div class="media-body">
-								<h3 class="media-heading">Secure Smart Contract Development</h3>
-								<p>Credits go to <a rel="nofollow" href="https://pixabay.com">Pixabay</a> and <a
-										rel="nofollow" href="http://unsplash.com">Unsplash</a> for images used in this
-									free CSS website template.</p>
-							</div>
-						</div>
-					</div>
+            <div class="col-md-4 col-xs-11 wow fadeInUp" data-wow-delay="0.6s">
+                <div class="media">
+                    <div class="media-object media-left">
+                        <i class="fa fa-paper-plane"></i>
+                    </div>
+                    <div class="media-body">
+                        <h3 class="media-heading">Secure Smart Contract Development</h3>
+                        <p>Credits go to <a rel="nofollow" href="https://pixabay.com">Pixabay</a> and <a rel="nofollow" href="http://unsplash.com">Unsplash</a> for images used in this free CSS website template.</p>
+                        <button class="btn btn-primary view-more" data-target="#modal3">View More</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- end work -->
 
-				</div>
-			</div>
-		</div>
-		<!-- end work -->
 
 		<!-- start about -->
 		<div id="about" class="section">
@@ -123,12 +127,20 @@
 				<div class="row">
 					<div class="col-md-6 col-xs-11 wow fadeInLeft" data-wow-delay="0.9s">
 						<h2>ABOUT ME</h2>
-						<!-- <h4>DESIGNER &AMP; DEVELOPER</h4> -->
-						<!-- <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
-						<p>Dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p> -->
+						<div class="social-icons" style="margin-top: 30px;">
+							<a href="https://github.com/vigneshbalu96" target="_blank" class="social-icon">
+								<i class="fab fa-github fa-2x"></i>
+							</a>
+							<a href="https://twitter.com/vigneshbalu96" target="_blank" class="social-icon">
+								<i class="fab fa-twitter fa-2x"></i>
+							</a>
+							<a href="https://linkedin.com/in/10vb" target="_blank" class="social-icon">
+								<i class="fab fa-linkedin fa-2x"></i>
+							</a>
+						</div>
 					</div>
 					<div class="col-md-6 col-xs-11 wow fadeInRight" data-wow-delay="0.9s">
-						<span class="text-top">DApp Develpment<small>90%</small></span>
+						<span class="text-top">DApp Development<small>90%</small></span>
 						<div class="progress">
 							<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60"
 								aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
@@ -143,7 +155,7 @@
 							<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60"
 								aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
 						</div>
-						<span>HTLM5 &AMP; CSS3 <small>90%</small></span>
+						<span>HTML5 & CSS3 <small>90%</small></span>
 						<div class="progress">
 							<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60"
 								aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
@@ -152,6 +164,7 @@
 				</div>
 			</div>
 		</div>
+		
 		<!-- end about -->
 
 		<!-- start portfolio -->
@@ -213,6 +226,52 @@
 		</div>
 		<!-- end portfolio -->
 
+		
+		<!-- <div id="testimonial" class="section">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h2 class="wow bounce">TESTIMONIALS</h2>
+                <!-- Carousel -->
+                <div id="testimonialCarousel" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#testimonialCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#testimonialCarousel" data-slide-to="1"></li>
+                        <li data-target="#testimonialCarousel" data-slide-to="2"></li>
+                    </ol>
+
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                            <p>"Vignesh's blockchain expertise and innovative solutions have transformed our project!"</p>
+                            <h5>- Client 1</h5>
+                        </div>
+                        <div class="item">
+                            <p>"Their DeFi engineering skills are top-notch, delivering results that exceed expectations."</p>
+                            <h5>- Client 2</h5>
+                        </div>
+                        <div class="item">
+                            <p>"The smart contracts developed were secure and efficient, providing the best results."</p>
+                            <h5>- Client 3</h5>
+                        </div>
+                    </div>
+
+                    <!-- Controls -->
+                    <a class="left carousel-control" href="#testimonialCarousel" role="button" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#testimonialCarousel" role="button" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div> -->
+<!-- end testimonial carousel -->
 		<!-- start contact -->
 		<div id="contact" class="section">
 			<div class="container">
@@ -261,6 +320,34 @@
 		<!-- end footer -->
 
 	</div>
+
+	<!-- Modal 1 -->
+<div id="modal1" class="modal-overlay">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Innovative Blockchain Solution</h2>
+        <p>More details about innovative blockchain solutions...</p>
+    </div>
+</div>
+
+<!-- Modal 2 -->
+<div id="modal2" class="modal-overlay">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Advanced DeFi Engineering</h2>
+        <p>More details about advanced DeFi engineering...</p>
+    </div>
+</div>
+
+<!-- Modal 3 -->
+<div id="modal3" class="modal-overlay">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Secure Smart Contract Development</h2>
+        <p>More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... </p>
+    </div>
+</div>
+
 
 	<!-- jQuery -->
 	<script src="js/jquery.js"></script>
