--- a/index.html
+++ b/index.html
@@ -233,16 +233,16 @@
             <div class="col-md-12">
                 <h2 class="wow bounce">TESTIMONIALS</h2>
                 <!-- Carousel -->
-                <div id="testimonialCarousel" class="carousel slide" data-ride="carousel">
+                <!-- <div id="testimonialCarousel" class="carousel slide" data-ride="carousel">
                     <!-- Indicators -->
-                    <ol class="carousel-indicators">
+                    <!-- <ol class="carousel-indicators">
                         <li data-target="#testimonialCarousel" data-slide-to="0" class="active"></li>
                         <li data-target="#testimonialCarousel" data-slide-to="1"></li>
                         <li data-target="#testimonialCarousel" data-slide-to="2"></li>
-                    </ol>
+                    </ol> -->
 
                     <!-- Wrapper for slides -->
-                    <div class="carousel-inner" role="listbox">
+                    <!-- <div class="carousel-inner" role="listbox">
                         <div class="item active">
                             <p>"Vignesh's blockchain expertise and innovative solutions have transformed our project!"</p>
                             <h5>- Client 1</h5>
@@ -255,22 +255,22 @@
                             <p>"The smart contracts developed were secure and efficient, providing the best results."</p>
                             <h5>- Client 3</h5>
                         </div>
-                    </div>
+                    </div> -->
 
-                    <!-- Controls -->
+                    <!-- Controls
                     <a class="left carousel-control" href="#testimonialCarousel" role="button" data-slide="prev">
                         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </a>
-                    <a class="right carousel-control" href="#testimonialCarousel" role="button" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <a class="right carousel-control" href="#testimonialCarousel" role="button" data-slide="next"> -->
+                        <!-- <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </a>
                 </div>
             </div>
-        </div>
-    </div>
-</div> -->
+        </div> -->
+    <!-- </div> -->
+<!-- </div> --> --> -->
 <!-- end testimonial carousel -->
 		<!-- start contact -->
 		<div id="contact" class="section">
