--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             </div>
         </div> -->
     <!-- </div> -->
-<!-- </div> --> --> -->
+<!-- </div> -->
 <!-- end testimonial carousel -->
 		<!-- start contact -->
 		<div id="contact" class="section">
