--- a/index.html
+++ b/index.html
@@ -83,7 +83,12 @@
                     </div>
                     <div class="media-body">
                         <h3 class="media-heading">Innovative Blockchain Solution</h3>
-                        <p>Lavish CSS Template is designed by templatemo. Download, edit and use this layout.</p>
+                        <p>"Delivering cutting-edge blockchain architectures with advanced cryptographic protocols and decentralized frameworks.  
+						</p>
+						<p>Redefining possibilities through distributed ledger technologies, consensus mechanisms, and tokenized ecosystems.
+						</p>
+						<p>Empowering a smarter, interconnected future with scalable, secure, and interoperable blockchain solutions."
+						</p>
                         <button class="btn btn-primary view-more" data-target="#modal1">View More</button>
                     </div>
                 </div>
@@ -95,8 +100,13 @@
                         <i class="fa fa-link"></i>
                     </div>
                     <div class="media-body">
-                        <h3 class="media-heading">Advanced DeFi Engineering</h3>
-                        <p>We provide a wide range of HTML5 templates for free. Please spread a word about us on social media.</p>
+                        <h3 class="media-heading">Advanced Decentralized Finance Engineering</h3>
+                        <p>"Building advanced DeFi infrastructures with Solidity-engineered smart contracts and 	Layer-2 scalability solutions.
+						</p>
+						<p>Driving innovation in liquidity aggregation, CDP, AMMs, and zk-SNARK-powered decentralized protocols.
+						</p> 
+						<p>Shaping next-gen finance with cross-chain interoperability, optimized tokenomics, and protocol composability."
+						</p>
                         <button class="btn btn-primary view-more" data-target="#modal2">View More</button>
                     </div>
                 </div>
@@ -109,7 +119,13 @@
                     </div>
                     <div class="media-body">
                         <h3 class="media-heading">Secure Smart Contract Development</h3>
-                        <p>Credits go to <a rel="nofollow" href="https://pixabay.com">Pixabay</a> and <a rel="nofollow" href="http://unsplash.com">Unsplash</a> for images used in this free CSS website template.</p>
+                        <!-- <p>Credits go to <a rel="nofollow" href="https://pixabay.com">Pixabay</a> and <a rel="nofollow" href="http://unsplash.com">Unsplash</a> for images used in this free CSS website template.</p> -->
+						<p>"Delivering secure smart contract architectures with rigorous audits and vulnerability mitigation strategies.
+						</p>
+						<p>Redefining decentralized trust through advanced Solidity programming, formal verification, and modular design. 
+						</p> 
+						<p>Empowering robust dApps with tamper-proof logic, optimized gas efficiency, and seamless blockchain integration."
+						</p>
                         <button class="btn btn-primary view-more" data-target="#modal3">View More</button>
                     </div>
                 </div>
@@ -124,8 +140,11 @@
 		<div id="about" class="section">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-6 col-xs-11 wow fadeInLeft" data-wow-delay="0.9s">
+					<div class="col-md-12 wow bounce text-align-center">
 						<h2>ABOUT ME</h2>
+					</div>
+					<div class="col-md-6 col-xs-11 wow fadeInLeft" data-wow-delay="0.9s">
+						<h2>SOCIALS</h2>
 						<div class="social-icons" style="margin-top: 30px;">
 							<a href="https://github.com/vigneshbalu96" target="_blank" class="social-icon">
 								<i class="fab fa-github fa-2x"></i>
@@ -154,7 +173,7 @@
 							<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60"
 								aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
 						</div>
-						<span>HTML5 & CSS3 <small>90%</small></span>
+						<span>Research & Development <small>90%</small></span>
 						<div class="progress">
 							<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60"
 								aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
@@ -174,55 +193,59 @@
 						<h2 class="wow bounce">PORTFOLIO</h2>
 					</div>
 					<div class="col-md-4 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
-						<a href="https://github.com/vigneshbalu96/Decentralised_Stable_Coin" target="_blank">
+						<a href="https://github.com/vigneshbalu96/Raffle_Contract" target="_blank">
 							<div class="portfolio-thumb">
 								<img src="images/portfolio-img1.jpg" class="img-responsive" alt="portfolio img">
 								<div class="portfolio-overlay">
-									<h4>Web Design</h4>
+									<h4>Raffle / Lottery</h4>
 									<h5>Author: Vignesh Balusamy</h5>
 								</div>
 							</div>
 						</a>
 					</div>
 					<div class="col-md-4 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
-						<a href="https://github.com/vigneshbalu96/Decentralised_Stable_Coin" target="_blank"></a>
+						<a href="https://github.com/vigneshbalu96/Dynamic_NFT" target="_blank">
 							<div class="portfolio-thumb">
 								<img src="images/portfolio-img2.jpg" class="img-responsive" alt="portfolio img">
 								<div class="portfolio-overlay">
-									<h4>Web App</h4>
+									<h4>Dynamic NFT</h4>
 									<h5>Author: Vignesh Balusamy</h5>
 								</div>
 							</div>
+						</a>
 					</div>
 					<div class="col-md-4 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
-						<a href="https://github.com/vigneshbalu96/Decentralised_Stable_Coin" target="_blank"></a>
+						<a href="https://github.com/vigneshbalu96/Funding_Contract" target="_blank">
 							<div class="portfolio-thumb">
 								<img src="images/portfolio-img3.jpg" class="img-responsive" alt="portfolio img">
 								<div class="portfolio-overlay">
-									<h4>Mobile App</h4>
+									<h4>Crowd Funding</h4>
 									<h5>Author: Vignesh Balusamy</h5>
 								</div>
 							</div>
+						</a>
 					</div>
 					<div class="col-md-6 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
-						<a href="https://github.com/vigneshbalu96/Decentralised_Stable_Coin" target="_blank"></a>
+						<a href="https://github.com/vigneshbalu96/Decentralised_Stable_Coin" target="_blank">
 							<div class="portfolio-thumb">
 								<img src="images/portfolio-img4.jpg" class="img-responsive" alt="portfolio img">
 								<div class="portfolio-overlay">
-									<h4>Old Artwork</h4>
+									<h4>Decentralized Stable Coin</h4>
 									<h5>Author: Vignesh Balusamy</h5>
 								</div>
 							</div>
+						</a>
 					</div>
 					<div class="col-md-6 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
-						<a href="https://github.com/vigneshbalu96/Decentralised_Stable_Coin" target="_blank"></a>
-						<div class="portfolio-thumb">
-							<img src="images/portfolio-img5.jpg" class="img-responsive" alt="portfolio img">
-							<div class="portfolio-overlay">
-								<h4>New Animation</h4>
-								<h5>Author: Vignesh Balusamy</h5>
+						<a href="https://github.com/vigneshbalu96/Inherited-ERC-20-contract" target="_blank">
+							<div class="portfolio-thumb">
+								<img src="images/portfolio-img5.jpg" class="img-responsive" alt="portfolio img">
+								<div class="portfolio-overlay">
+									<h4>ERC-20</h4>
+									<h5>Author: Vignesh Balusamy</h5>
+								</div>
 							</div>
-						</div>
+						</a>
 					</div>
 				</div>
 			</div>
@@ -231,6 +254,9 @@
 
 		<div id="testimonial" class="container section">
 			<div class='row'>
+				<div class="col-md-12">
+					<h2 class="wow bounce text-align-center">TESTIMONIAL</h2>
+				</div>
 			  <div class='col-md-offset-2 col-md-8'>
 				<div class="carousel slide" data-ride="carousel" id="quote-carousel">
 				  <!-- Bottom Carousel Indicators -->
@@ -260,6 +286,7 @@
 					  <blockquote>
 						<div class="row">
 						  <div class="col-sm-9">
+							<h2>Hello</h2>
 							<p>Très chère Catherine
 		  En quittant ta maison et suite à l´atelier "s´ouvrir à la consolation, s´accorder de la joie de vivre" j´ai eu le coeur rempli d´une immense joie et d´une paix intérieure,sur le chemin du retour je me suis même surprise à chanter à tue tête dans ma voiture, c´est l´effet que tu m´as fait. Merci encore.</p>
 						  </div>
@@ -271,6 +298,7 @@
 					  <blockquote>
 						<div class="row">
 						  <div class="col-sm-9">
+							<h2>Hello</h2>
 							<p>Très chère Catherine
 		  En quittant ta maison et suite à l´atelier "s´ouvrir à la consolation, s´accorder de la joie de vivre" j´ai eu le coeur rempli d´une immense joie et d´une paix intérieure,sur le chemin du retour je me suis même surprise à chanter à tue tête dans ma voiture, c´est l´effet que tu m´as fait. Merci encore.</p>
 						  </div>
@@ -308,7 +336,7 @@
 							<input name="name" type="text" class="form-control" id="name" placeholder="Your Name" required>
 							<input name="email" type="email" class="form-control" id="email" placeholder="Your Email" required>
 							<textarea name="message" rows="5" class="form-control" id="message" placeholder="Your Message" required></textarea>
-							<button type="submit" class="form-control" id="send">SEND ME</button>
+							<button type="submit" class="form-control" id="send">Mail Vicky</button>
 						</form>
 						<p id="statusMessage"></p>
 					</div>
@@ -345,7 +373,10 @@
     <div class="modal-content">
         <span class="close">&times;</span>
         <h2>Innovative Blockchain Solution</h2>
-        <p>More details about innovative blockchain solutions...</p>
+        <p>Delivering cutting-edge blockchain solutions with a focus on innovation.
+			Redefining possibilities through decentralized technologies.
+			Empowering a smarter, more connected future...
+		</p>
     </div>
 </div>
 
