--- a/index.html
+++ b/index.html
@@ -274,9 +274,8 @@
 					  <blockquote>
 						<div class="row">
 						  <div class="col-sm-9">
-							<h2>Hello</h2>
-							<p>Très chère Catherine
-		  En quittant ta maison et suite à l´atelier "s´ouvrir à la consolation, s´accorder de la joie de vivre" j´ai eu le coeur rempli d´une immense joie et d´une paix intérieure,sur le chemin du retour je me suis même surprise à chanter à tue tête dans ma voiture, c´est l´effet que tu m´as fait. Merci encore.</p>
+							<h4>Thilak Vasanth[CTO]-Unitic Private Limited</h4>
+							<p>Mr. Vignesh Balusamy consistently delivers high-quality work as a blockchain developer, demonstrating exceptional technical expertise and attention to detail. Their innovative approach and dedication to security have significantly enhanced our projects. Their collaborative spirit and ability to solve complex problems make them an invaluable asset to our team.</p>
 						  </div>
 						</div>
 					  </blockquote>
@@ -286,9 +285,9 @@
 					  <blockquote>
 						<div class="row">
 						  <div class="col-sm-9">
-							<h2>Hello</h2>
-							<p>Très chère Catherine
-		  En quittant ta maison et suite à l´atelier "s´ouvrir à la consolation, s´accorder de la joie de vivre" j´ai eu le coeur rempli d´une immense joie et d´une paix intérieure,sur le chemin du retour je me suis même surprise à chanter à tue tête dans ma voiture, c´est l´effet que tu m´as fait. Merci encore.</p>
+							<h4>Akhil Tawde [Senior Blockchian Researcher & Developer]-IIT Madras</h4>
+							<!-- <p>Mr. Vignesh Balusamy consistently delivers high-quality work as a blockchain developer, demonstrating exceptional technical expertise and attention to detail. Their innovative approach and dedication to security have significantly enhanced our projects. Their collaborative spirit and ability to solve complex problems make them an invaluable asset to our team.</p> -->
+							<p>Vignesh’s ability to tackle complex blockchain challenges with precision and creativity is truly commendable. Their proactive approach and dedication to continuous learning have made a positive impact on our team and projects.</p>
 						  </div>
 						</div>
 					  </blockquote>
@@ -298,9 +297,8 @@
 					  <blockquote>
 						<div class="row">
 						  <div class="col-sm-9">
-							<h2>Hello</h2>
-							<p>Très chère Catherine
-		  En quittant ta maison et suite à l´atelier "s´ouvrir à la consolation, s´accorder de la joie de vivre" j´ai eu le coeur rempli d´une immense joie et d´une paix intérieure,sur le chemin du retour je me suis même surprise à chanter à tue tête dans ma voiture, c´est l´effet que tu m´as fait. Merci encore.</p>
+							<h4>Maarten [CMO]-Galaxy Technologies</h4>
+							<p>Working with Vignesh has been a pleasure. Their deep understanding of blockchain technology and commitment to excellence are evident in every task they undertake. They are always ready to help and provide valuable insights.</p>
 						  </div>
 						</div>
 					  </blockquote>
@@ -372,11 +370,15 @@
 <div id="modal1" class="modal-overlay">
     <div class="modal-content">
         <span class="close">&times;</span>
-        <h2>Innovative Blockchain Solution</h2>
-        <p>Delivering cutting-edge blockchain solutions with a focus on innovation.
-			Redefining possibilities through decentralized technologies.
-			Empowering a smarter, more connected future...
-		</p>
+        <h3 class="black-text">Innovative Blockchain Solution</h2>
+		<ul>
+			<li class="no-center"><strong>Decentralized Ledger Technology (DLT):</strong> A distributed database that enables transparent, immutable record-keeping across multiple parties, eliminating the need for intermediaries.</li>
+			<li class="no-center"><strong>Smart Contracts:</strong> Self-executing contracts with the terms of the agreement directly written into code, ensuring trustless, automated execution without third-party intervention.</li>
+			<li class="no-center"><strong>Consensus Algorithms:</strong> Mechanisms like Proof of Work (PoW) and Proof of Stake (PoS) that ensure agreement on the validity of transactions across a decentralized network.</li>
+			<li class="no-center"><strong>Cross-Chain Interoperability:</strong> The ability for different blockchain networks to communicate and interact with one another, enabling seamless data and value transfer across platforms.</li>
+			<li class="no-center"><strong>Tokenomics:</strong> The study and design of token systems within blockchain ecosystems, optimizing the incentives and economic models to create sustainable, decentralized networks.</li>
+			<li class="no-center"><strong>Zero-Knowledge Proofs (ZKPs):</strong> Cryptographic methods that enable one party to prove to another that a statement is true without revealing any specific information, enhancing privacy and scalability in blockchain applications.</li>
+		  </ul>
     </div>
 </div>
 
@@ -384,8 +386,15 @@
 <div id="modal2" class="modal-overlay">
     <div class="modal-content">
         <span class="close">&times;</span>
-        <h2>Advanced DeFi Engineering</h2>
-        <p>More details about advanced DeFi engineering...</p>
+		<h2 class="black-text">Advanced Decentralized Finance Engineering</h2>
+		<ul>
+		  <li class="no-center"><strong>Automated Market Makers (AMMs):</strong> Decentralized exchanges that use algorithms to set asset prices and facilitate trades without relying on traditional order books.</li>
+		  <li class="no-center"><strong>Yield Farming:</strong> The process of providing liquidity to DeFi protocols in exchange for rewards, typically in the form of governance tokens or additional yield.</li>
+		  <li class="no-center"><strong>Liquidity Pools:</strong> Pools of tokens locked in a smart contract, enabling decentralized exchanges and lending platforms to function without intermediaries.</li>
+		  <li class="no-center"><strong>Flash Loans:</strong> Uncollateralized loans that allow users to borrow assets for a short period, typically within a single transaction block, for arbitrage or other strategies.</li>
+		  <li class="no-center"><strong>Staking & Delegated Proof of Stake (DPoS):</strong> The process of locking up tokens to secure a network or participate in governance, earning rewards based on participation and consensus.</li>
+		  <li class="no-center"><strong>Governance Tokens:</strong> Tokens that give holders voting power in decentralized protocols, enabling them to influence decisions like protocol upgrades or fund allocation.</li>
+		</ul>
     </div>
 </div>
 
@@ -393,8 +402,15 @@
 <div id="modal3" class="modal-overlay">
     <div class="modal-content">
         <span class="close">&times;</span>
-        <h2>Secure Smart Contract Development</h2>
-        <p>More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... More details about secure smart contract development... </p>
+		<h2 class="black-text">Secure Smart Contract Development</h2>
+		<ul>
+		  <li class="no-center"><strong>Reentrancy Attacks:</strong> A common vulnerability in smart contracts where an external contract makes recursive calls back into the calling contract, potentially draining funds.</li>
+		  <li class="no-center"><strong>Gas Optimization:</strong> Techniques to minimize the gas consumption of smart contract functions, ensuring that operations are efficient and cost-effective.</li>
+		  <li class="no-center"><strong>Access Control:</strong> Mechanisms that restrict access to certain functions or variables in a contract, ensuring only authorized users can perform critical actions.</li>
+		  <li class="no-center"><strong>Formal Verification:</strong> The process of mathematically proving that a smart contract behaves as intended, eliminating the possibility of errors or exploits.</li>
+		  <li class="no-center"><strong>Upgradability:</strong> The ability to upgrade smart contracts after deployment, often through proxy patterns, to adapt to new features or fix vulnerabilities.</li>
+		  <li class="no-center"><strong>Test-Driven Development (TDD):</strong> A software development approach where tests are written before code to ensure the contract’s behavior is correct and secure from the outset.</li>
+		</ul>
     </div>
 </div>
 
