--- a/index.html
+++ b/index.html
@@ -274,7 +274,12 @@
 					  <blockquote>
 						<div class="row">
 						  <div class="col-sm-9">
-							<h4>Thilak Vasanth[CTO]-Unitic Private Limited</h4>
+							<!-- <h4>Thilak Vasanth[CTO]-Unitic Private Limited</h4> -->
+							<h4>
+								<a href="https://www.linkedin.com/in/your-profile/#recommendations" target="_blank">Thilak Vasanth</a> 
+								[CTO]-Unitic Private Limited.
+							</h4>
+							
 							<p>Mr. Vignesh Balusamy consistently delivers high-quality work as a blockchain developer, demonstrating exceptional technical expertise and attention to detail. Their innovative approach and dedication to security have significantly enhanced our projects. Their collaborative spirit and ability to solve complex problems make them an invaluable asset to our team.</p>
 						  </div>
 						</div>
@@ -285,9 +290,16 @@
 					  <blockquote>
 						<div class="row">
 						  <div class="col-sm-9">
-							<h4>Akhil Tawde [Senior Blockchian Researcher & Developer]-IIT Madras</h4>
+							<h4>
+								<a href="https://www.linkedin.com/in/your-profile/#recommendations" target="_blank">Akhil Tawde</a> 
+								[Senior Blockchain Researcher & Developer] - IIT Madras.
+							</h4>
+							
 							<!-- <p>Mr. Vignesh Balusamy consistently delivers high-quality work as a blockchain developer, demonstrating exceptional technical expertise and attention to detail. Their innovative approach and dedication to security have significantly enhanced our projects. Their collaborative spirit and ability to solve complex problems make them an invaluable asset to our team.</p> -->
-							<p>Vignesh’s ability to tackle complex blockchain challenges with precision and creativity is truly commendable. Their proactive approach and dedication to continuous learning have made a positive impact on our team and projects.</p>
+							<p>I had the privilege of mentoring Vignesh in deploying Blockchain networks, where he quickly mastered the complexities of blockchain deployment. His ability to translate theoretical knowledge into practical solutions was remarkable, and he consistently delivered innovative approaches to challenging use cases, significantly enhancing our projects' efficiency.
+							</p>
+							<p>Vignesh's problem-solving skills, eagerness to learn, and collaborative mindset made him a key contributor to our team. I am confident he will excel in any blockchain-related endeavor, driving impactful results with his technical expertise and dedication.
+							</p>
 						  </div>
 						</div>
 					  </blockquote>
@@ -297,7 +309,11 @@
 					  <blockquote>
 						<div class="row">
 						  <div class="col-sm-9">
-							<h4>Maarten [CMO]-Galaxy Technologies</h4>
+							<!-- <h4>Maarten [CMO]-Galaxy Technologies</h4> -->
+							<h4>
+								<a href="https://www.linkedin.com/in/your-profile/#recommendations" target="_blank">Maarten</a> 
+								[CMO]-Galaxy Technologies.
+							</h4>
 							<p>Working with Vignesh has been a pleasure. Their deep understanding of blockchain technology and commitment to excellence are evident in every task they undertake. They are always ready to help and provide valuable insights.</p>
 						  </div>
 						</div>
