--- a/index.html
+++ b/index.html
@@ -280,7 +280,9 @@
 								[CTO]-Unitic Private Limited.
 							</h4>
 							
-							<p>Mr. Vignesh Balusamy consistently delivers high-quality work as a blockchain developer, demonstrating exceptional technical expertise and attention to detail. Their innovative approach and dedication to security have significantly enhanced our projects. Their collaborative spirit and ability to solve complex problems make them an invaluable asset to our team.</p>
+							<p>Vignesh Balusamy is a dedicated and hard working professional with a strong research-oriented mindset and exceptional problem-solving abilities. His ability to tackle complex challenges and deliver practical solutions has made him an invaluable contributor to our team. </p>
+							<p>Vignesh’s work ethic and focus on innovation ensure he consistently adds significant value to any project or organization he is part of.
+							</p>
 						  </div>
 						</div>
 					  </blockquote>
